Add hint for creating venv with differnet python versions

--- a/jupyterlab-setup.ipynb
+++ b/jupyterlab-setup.ipynb
@@ -9,7 +9,7 @@
     "To use jupyter kernels with virtual enviornments:\n",
     "\n",
     "```\n",
-    "virtualenv myenv\n",
+    "virtualenv myenv # or better: python3 -m venv myenv\n",
     "cd myenv/bin\n",
     "source activate\n",
     "\n",
@@ -39,6 +39,13 @@
     "\n",
     "source [here](http://queirozf.com/entries/jupyter-kernels-how-to-add-change-remove)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
