Fix kernel version error

--- a/jupyterlab-setup.ipynb
+++ b/jupyterlab-setup.ipynb
@@ -16,7 +16,7 @@
     "### virtual env is activated\n",
     "\n",
     "pip install ipykernel\n",
-    "ipython kernel install --user --name=myenv\n",
+    "python -m ipykernel install --user --name=<name-to-appear-in-launcher>\n",
     "```\n",
     "And kernel will appear next time we run jupyter lab.\n"
    ]
